# expandtheon

./: README.md  expandtheon-icon-theme_1.0.0_amd64.deb  meson.build
apps/: meson.build
debian/: changelog  control  copyright  files
